@@ -30,8 +30,8 @@
   * Many changes to handling ZIP archives:
       - Files in multiple levels are now recognized.  This fixes issues
         in Windows where such files couldn't be loaded at all, and in all
-        systems where ROMs with the same name (but different directories)
-        weren't being recognized.
+        systems where ROMs with the same name (but in different
+        directories) weren't being recognized.
       - ZIP contents are now handled more intelligently.  Archives
         containing only one ROM are automatically loaded, whereas those
         with multiple files are treated as directories.
@@ -42,7 +42,7 @@
         of caching (the old code was actually from 1998!).
       - This new 'archive' infrastructure may eventually lead to 7-Zip
         support, as well as 'virtual' formats (such as showing the list
-        of files for 2in1/4in1/8in1/etc within the UI.
+        of files for 2in1/4in1/8in1/etc within the UI).
 
   * Improved bankswitch autodetection for X07 ROMs (although there's only
     two known ROMs in existence, so the detection probably isn't robust).
@@ -57,6 +57,13 @@
     files.  These are set with the 'snapsavedir' and 'snaploaddir'
     commandline arguments (which replace the old 'snapdir'), and are
     also available within the UI.
+
+  * Changed 'eepromdir' commandline argument to 'nvramdir', and changed
+    the default location to BASEDIR/nvram (where BASEDIR depends on your
+    OS).  This means all your EEPROM and Flash files will have to be
+    manually moved to this new directory.  This affects developers, and
+    those people playing ROMs with AtariVox/SaveKey support as well as
+    the newer 'Star Castle' FA2 ROMs.
 
   * Updated included PNG and ZLIB libraries to latest stable version.
 
